# ZeroSumEval

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  attacker.py  defender.py  dspy_test.py  main.py  pyproject.toml  requirements.txt  run_all_games.py  run_game.py  run_matches.py  run_pool_matches.py  setup.py  start_docker.sh  tournament_main.py
.github/workflows/: tests.yml
analysis_scripts/: log_types.py  tournament_simulator.py  tournament_simulator_bt.py  visualize_chess.py  visualize_llama_pools.py
configs/: chess.yaml  chess_matches.yaml  chess_optimize.yaml  chess_tournament.yaml  crackme.yaml  debate.yaml  gandalf.yaml  gpt4_gpt4_chess.yaml  liars_dice.yaml  mathquiz.yaml  poker.yaml  pyjail.yaml
configs/pool/: chess.yaml  debate.yaml  gandalf.yaml  liars_dice.yaml  mathquiz.yaml  poker.yaml  pyjail.yaml
leaderboard_app/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  startup.sh  supervisord.conf
scripts/: start_docker.sh
src/: attacker.py  attacker_dspy.py  defender.py  defender_dspy.py  dspy_test.py  dummy_challenge.py  environment.py  verification.py
tests/: conftest.py  test_checkpointing.py  test_config_utils.py  test_game_state.py  test_logging_utils.py  test_main.py  test_player.py  test_registry.py  test_type_definitions.py  test_types.py
zero_sum_eval/: __init__.py  caching.py  calculate_elo.py  calculate_ratings.py  checkpointing.py  config_utils.py  dataset.py  game_manager.py  game_state.py  logging_utils.py  main.py  metrics.py  player.py  registry.py  type_definitions.py  types.py
zseval/: game_manager.py  human_player.py  main.py  player.py
(+186 files in other folders)
